components/Header.module.css
.main {
  position: relative;
  width: 100vw;
  max-width: 100vw;
  overflow: hidden;
  background-color: #4242cb;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sadFaceContainer {
  /* display: flex; */
  flex-direction: column;
  align-items: center;
  width: 100%;
  position: relative;
  margin-top: -470px;
  display: none;
}

.sadFace {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  margin: 0 auto;
  animation: face 3s normal forwards;
}

.sadFaceEyes,
.sadFaceBase,
.sadFaceBrows {
  position: relative;
}

.sadFaceEyes {
  bottom: 172px;
  animation: eyes 3s normal forwards;
}

.sadFaceBrows {
  bottom: 252px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.sadFaceBrowsL {
  margin-right: 33px;
  animation: browL 3s normal forwards;
}

.sadFaceBrowsR {
  transform: scaleX(-1);
  margin-left: 33px;
  animation: browR 3s normal backwards;
}

@keyframes face {
  0% {
    transform: scale(0.1);
    opacity: 0;
  }
  50% {
    transform: scale(0.95);
    opacity: 1;
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}

@keyframes eyes {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(5px);
  }
  80% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(10px);
  }
}

@keyframes browL {
  0% {
    transform: translateX(0) translateY(0);
  }
  80% {
    transform: translateX(20px) translateY(10px);
  }
  100% {
    transform: translateX(20px) translateY(10px);
  }
}

@keyframes browR {
  0% {
    transform: scaleX(-1) translateX(0) translateY(0);
  }
  80% {
    transform: scaleX(-1) translateX(20px) translateY(10px);
  }
  100% {
    transform: scaleX(-1) translateX(20px) translateY(10px);
  }
}
.stackImg {
  position: absolute;
  margin: 0 auto;
  width: 100%;
  filter: drop-shadow(8px 8px 0px rgba(0, 0, 0, 0.25));
  max-width: 1216px;
}

.starsLeft {
  position: relative;
  left: 120px;
  top: -40px;
}

.starsRight {
  float: right;
  position: relative;
  right: 60px;
  top: -240px;
  transform: scaleX(-1);
}

.starGroup {
  position: relative;
  /* left: -200px; */
  z-index: 5;

  display: none;
}

.bigStar,
.fatStar,
.smallStar {
  position: relative;
  animation: star 1.5s normal forwards ease-in;
  opacity: 0;
}

.smallStar {
  top: -80px;
  right: 8px;
  animation-delay: 0.5s;
}

.fatStar {
  top: -280px;
  right: 35px;
  animation-delay: 1s;
}

@keyframes star {
  0% {
    transform: scale(0.1);
    opacity: 0;
  }
  50% {
    transform: scale(0.6);
    opacity: 1;
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}

.animations {
  position: absolute;
  height: 3040px;
  z-index: 10;
  width: 100vw;
  margin-top: 700px;
  top: 0;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.animationBar {
  position: absolute;
  max-width: 1216px;
  z-index: 2;
  margin-top: 250px;
  width: 640px;
  max-width: 60vw;
}

.abstractUI {
  position: absolute;
  margin: 0 auto;
  /* padding-right: 6px; */
  max-width: 1216px;
  z-index: 1;
  margin-top: 200px;
  width: 100%;
}

.invisible {
  display: none;
}

.aboveBG {
  max-width: 100vw;
  position: absolute;
  margin-left: auto;
  left: 0;
  height: 3040px;
  right: 0;
  margin-right: auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.background {
  background: linear-gradient(
    178deg,
    #4242cb 0%,
    #4242cb 10vw,
    #20202a 0%
  ); /*'gradient' gets rid of dotted black line at top bug*/
  width: 400vw;
  height: 3040px;
  overflow: hidden;
  position: relative;
  background-position-y: -10;
}

.background::before {
  transform: rotate(-2deg);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 400vw;
  height: 3040px;
  background-size: cover;
  background-repeat: repeat-x;
  background: url('../public/hero-background-repeat.png');
  background-color: repeating-linear-gradient(
    to bottom,
    #3a3a44 0px,
    #3a3a44 80px,
    #24242f 80px,
    #24242f 160px
  );
}

.header {
  transform: rotate(-2deg);
  font-size: 80px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: white;
  font-weight: 400;
  padding: 24px 0px;
  line-height: 72px;
  font-family: 'Cartridge';
  font-feature-settings: 'ss02' on;
  -webkit-font-smoothing: antialiased;
  text-shadow: 7px 7px 0px #7f0080, 6px 6px 0px #7f0080, 5px 5px 0px #7f0080,
    4px 4px 0px #7f0080, 3px 3px 0px #7f0080, 2px 2px 0px #7f0080,
    1px 1px 0px #7f0080, 0px 2px 8px rgba(0, 0, 0, 0.48);
}

.header2 {
  text-shadow: 7px 7px 0px #614901, 6px 6px 0px #614901, 5px 5px 0px #614901,
    4px 4px 0px #614901, 3px 3px 0px #614901, 2px 2px 0px #614901,
    1px 1px 0px #614901, 0px 2px 8px rgba(0, 0, 0, 0.48);
}

.header3 {
  text-shadow: 7px 7px 0px #02022a, 6px 6px 0px #02022a, 5px 5px 0px #02022a,
    4px 4px 0px #02022a, 3px 3px 0px #02022a, 2px 2px 0px #02022a,
    1px 1px 0px #02022a, 0px 2px 8px rgba(0, 0, 0, 0.48);
}
.title {
  max-width: 1000px;
  margin: 24px;
}

.titleLong {
  max-width: 1260px;
  margin: 24px;
}

.title span {
  display: inline-block;
}

.headerContainerA,
.headerContainerB,
.headerContainerC,
.headerContainerD {
  /* margin-left: 7px; 2 * 100px * tan(2deg) */

  padding-top: 0px;
  max-width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.headerWrapper {
  height: 550px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.headerContainerA {
  margin-top: -100px;
}

.headerContainerB {
  /* margin-top: calc(10px + 4vw); */
}

.headerContainerC,
.headerContainerD {
  margin-top: 470px;
}
.headerButtonGroup {
  transform: rotate(-2deg);
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  justify-content: space-between;
  height: 125px;
}

@media (max-width: 700px) {
  .header {
    font-size: 32px;
    line-height: 40px;
  }
  .background {
    height: 1900px;
    background-size: contain;
  }
  .background::before {
    height: 1900px;
    background-size: contain;
  }
  .header {
    padding-bottom: 0px;
  }

  .headerWrapper {
    height: 330px;
  }

  .headerContainerA {
    margin-top: -86.84px;
  }

  .headerContainerB {
    margin-top: 40.53px;
  }

  .headerContainerC,
  .headerContainerD {
    margin-top: 263.16px;
  }

  .headerButtonGroup {
    height: 100px;
  }
  .animationBar {
    margin-top: -50px;
  }

  .abstractUI {
    margin-top: -100px;
  }
  .starsLeft {
    left: 3%;
  }
  .starsRight {
    right: 0%;
  }
}

.signOut {
  display: flex;
  flex-direction: row;
}

.signOutSvg {
  margin-top: 5px;
  margin-left: 0.4rem;
}

